// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog renders 1`] = `
<button
  className="sc-kkKunT cTncJg"
  onClick={[Function]}
  size="small"
  variant="primary"
>
  <div
    className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
  >
    Open Dialog
  </div>
</button>
`;

exports[`Dialog renders Another Dialog Header 1`] = `
<button
  className="ButtonComponent-sc-1qwityd-0 hRAAeK"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  size="medium"
>
  Open Dialog
  <div
    className="Hover-yzznpt-0 jmcLn"
  />
</button>
`;

exports[`Dialog renders Dialog Header 1`] = `
<button
  className="sc-kkKunT cTncJg"
  onClick={[Function]}
  size="small"
  variant="primary"
>
  <div
    className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
  >
    Open Dialog
  </div>
</button>
`;

exports[`Dialog renders RTL 1`] = `
<div
  dir="rtl"
>
  <button
    className="sc-kkKunT cTncJg"
    onClick={[Function]}
    size="small"
    variant="primary"
  >
    <div
      className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
    >
      Open Dialog
    </div>
  </button>
</div>
`;

exports[`Dialog renders with No Background 1`] = `
<button
  className="sc-kkKunT cTncJg"
  onClick={[Function]}
  size="small"
  variant="primary"
>
  <div
    className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
  >
    Open Dialog
  </div>
</button>
`;

exports[`Dialog renders with No Close 1`] = `
<button
  className="sc-kkKunT cTncJg"
  onClick={[Function]}
  size="small"
  variant="primary"
>
  <div
    className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
  >
    Open Dialog
  </div>
</button>
`;
